// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopoverContent component renders 1`] = `
<div
  aria-hidden={true}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "0",
      "opacity": "0",
      "position": "absolute",
      "top": "0",
      "visibility": "hidden",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, additional props added 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  data-foo="bar"
  id="mockId"
  onClick={[MockFunction]}
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, custom style provided 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 0px)",
      "visibility": "visible",
      "zIndex": "9999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & bottom 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(318px + 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & bottom left 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(150px - 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & bottom right 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(318px + 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & left 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(150px - 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "134px",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & numeric offset 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + 10px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & outside bottom 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "37.5px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(0px - 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & outside left 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(28px + 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "134px",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & outside right 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(-50px - 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "137.5px",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & outside top 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(28px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & rem offset 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(218px + -0.5rem)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & right 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(318px + 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "134px",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & top 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "234px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(50px - 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & top left 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(150px - 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "134px",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open & top right 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "calc(318px + 0px)",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(50px - 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, open 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "-75px",
      "opacity": "1",
      "position": "absolute",
      "top": "calc(0px + 0px)",
      "visibility": "visible",
      "zIndex": "999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent component renders, triggerRect null 1`] = `
<div
  aria-hidden={false}
  aria-label="Mock label"
  id="mockId"
  role="dialog"
  style={
    Object {
      "left": "0",
      "opacity": "1",
      "position": "absolute",
      "top": "0",
      "visibility": "visible",
      "zIndex": "9999",
    }
  }
  tabIndex="-1"
>
  <div>
    This is some content
  </div>
</div>
`;

exports[`PopoverContent container renders 1`] = `
<div>
  <ForwardRef(withForwardedRef(PopoverContent))
    id="mockId"
    label="Mock label"
    triggerRect={
      Object {
        "height": 18,
        "left": 300,
        "top": 200,
        "width": 18,
      }
    }
  >
    <PopoverContent
      forwardedRef={
        Object {
          "current": <div
            aria-hidden="true"
            aria-label="Mock label"
            id="mockId"
            role="dialog"
            style="z-index: 999; position: absolute; top: 0px; left: 0px; opacity: 0; visibility: hidden;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>,
        }
      }
      id="mockId"
      label="Mock label"
      triggerRect={
        Object {
          "height": 18,
          "left": 300,
          "top": 200,
          "width": 18,
        }
      }
    >
      <div
        aria-hidden={true}
        aria-label="Mock label"
        id="mockId"
        role="dialog"
        style={
          Object {
            "left": "0",
            "opacity": "0",
            "position": "absolute",
            "top": "0",
            "visibility": "hidden",
            "zIndex": "999",
          }
        }
        tabIndex="-1"
      >
        <div>
          This is some content
        </div>
      </div>
    </PopoverContent>
  </ForwardRef(withForwardedRef(PopoverContent))>
</div>
`;
